--- a/html/index.html
+++ b/html/index.html
@@ -1,53 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning GO</title>
-    <link rel="stylesheet" href="/css/stylesheet.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/stylesheet.css" />
+  </head>
+  <body>
     <header class="heading">
-        <h3>LearningGo</h3>
-        <nav>
-            <ul class="links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="categories.html">Categories</a></li>
-                <li><a href="courses.html">Courses</a></li>
-                <li><a href="teams.html">For Teams</a></li>
-                <li><a href="blog.html"> Blog</a></li>
-                <li>
-                    <a href="profile.html">
-                    <img src="../images/img/imagetag.jpg" alt="user profile" width="24" height="24">
-                </a>
-                </li>
-            </ul>
-        </nav>
+      <h3>LearningGo</h3>
+      <nav>
+        <ul class="links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="categories.html">Categories</a></li>
+          <li><a href="courses.html">Courses</a></li>
+          <li><a href="teams.html">For Teams</a></li>
+          <li><a href="blog.html"> Blog</a></li>
+          <li>
+            <a href="profile.html">
+              <img
+                src="../images/img/imagetag.jpg"
+                alt="user profile"
+                width="24"
+                height="24"
+              />
+            </a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <section class="hero">
-        <div>
-            <h3>Get a free trial of <br/>LearningGo premium</h3>
-            <p>Start Learning for <span>free!</span></p>
-        </div>
-        <img src="../images/img/imagetag.jpg" alt="signature"/>
+      <div>
+        <h3>Get a free trial of <br />LearningGo premium</h3>
+        <p>Start Learning for <span>free!</span></p>
+      </div>
+      <img src="../images/img/imagetag.jpg" alt="signature" />
     </section>
 
     <section class="social">
-        <ul>
-            <li>
-                <a href="">Continue with Facebook</a>
-            </li>
-            <li>
-                <a href="">Continue with Instagram</a>
-            </li>
-            <li>
-                <a href="">Continue with Google</a>
-            </li>
-            <li>
-                <a href="">Sign up with Email</a>
-            </li>
-        </ul>
+      <ul>
+        <li>
+          <a href="">Continue with Facebook</a>
+        </li>
+        <li>
+          <a href="">Continue with Instagram</a>
+        </li>
+        <li>
+          <a href="">Continue with Google</a>
+        </li>
+        <li>
+          <a href="">Sign up with Email</a>
+        </li>
+      </ul>
     </section>
-</body>
+  </body>
 </html>
